--- a/src/MS.OSM.Querys/MS.OSM.Querys.DAL/App.Config
+++ b/src/MS.OSM.Querys/MS.OSM.Querys.DAL/App.Config
@@ -1,7 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="OSMEntities" connectionString="metadata=res://*/EFModel.Model.csdl|res://*/EFModel.Model.ssdl|res://*/EFModel.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DIOGO-PC;initial catalog=OSM-SIAT-P;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
+    <add name="OSMEntities" connectionString="metadata=res://*/EF.Model.Model.csdl|res://*/EF.Model.Model.ssdl|res://*/EF.Model.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=DIOGO-PC;Initial Catalog=OSM-SIAT-P;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
